objects/cwbtool__ErrorLog__c.object
<CustomObject>
    <description>Stores all the exceptions thrown by code</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>EL-{00000000}</displayFormat>
        <label>Error Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>cwbtool__Message__c</fullName>
        <description>Error Message that displays for the user.</description>
        <inlineHelpText>Error Message that displays for the user.</inlineHelpText>
        <label>Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cwbtool__ErrorType__c</fullName>
        <description>Type of exception, such as DmlException, ListException, MathException, and so on.</description>
        <inlineHelpText>Type of exception, such as DmlException, ListException, MathException, and so on.</inlineHelpText>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__LineNumber__c</fullName>
        <description>Line Number from where the exception was thrown.</description>
        <inlineHelpText>Line Number from where the exception was thrown.</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__StackTrace__c</fullName>
        <description>Detailed stack trace showing additional error information</description>
        <inlineHelpText>Detailed stack trace showing additional error information</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>